Basic error handling, creating recipes and typography
