# ShriperApi/openapi.json
@@ -46,12 +46,12 @@
           "x-position": 1
         },
         "responses": {
-          "200": {
+          "400": {
             "description": "",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Recipe"
+                  "$ref": "#/components/schemas/CreateRecipeValidationErrorResponse"
                 }
               }
             }
@@ -323,6 +323,54 @@
           }
         }
       },
+      "CreateRecipeValidationErrorResponse": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "title": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CreateIngredientDtoValidationError"
+            }
+          },
+          "instructions": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "vitalInstructions": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
+      "CreateIngredientDtoValidationError": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "name": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "amount": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "CreateRecipeDto": {
         "type": "object",
         "additionalProperties": false,
@@ -341,7 +389,7 @@
             "type": "array",
             "minItems": 1,
             "items": {
-              "$ref": "#/components/schemas/Ingredient"
+              "$ref": "#/components/schemas/CreateIngredientDto"
             }
           },
           "instructions": {
@@ -353,6 +401,24 @@
             "type": "string",
             "maxLength": 200,
             "minLength": 0
+          }
+        }
+      },
+      "CreateIngredientDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "name",
+          "amount"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "minLength": 1
+          },
+          "amount": {
+            "type": "string",
+            "minLength": 1
           }
         }
       },
